# customer-support-bot

./: .gitignore  README.md  main.py  pyproject.toml
backend/: database.py  main.py  rag.py  schemas.py
frontend/: Home.py
frontend/pages/: Admin.py
knowledge_base/: faq.txt  products.txt  return_policy.txt  shipping_policy.txt
