[project]
name = "customer-support-bot"
version = "0.1.0"
description = "E-commerce customer support bot with RAG, FastAPI, and escalation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    # RAG
    "llama-index-core>=0.14.0",
    "llama-index-llms-groq>=0.3.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    # LLM + tools
    "groq>=1.5.0",
    "tavily-python>=0.5.0",
    "wikipedia>=1.4.0",
    # File parsing
    "pypdf>=5.0.0",
    "docx2txt>=0.8",
    "pandas>=2.0.0",
    # Frontend
    "streamlit>=1.40.0",
    # Utils
    "python-dotenv>=1.0.0",
]
